# Crumbl-2D

./: .gitignore  README.md  SECURITY.md
.github/workflows/: codeql-analysis.yml
Editor/: editMain.py  fileHandler.py  launcher.py  main.py  page_renderer.py  seperatedWindow.py
Editor/UIAssets/stockAssets/: note.md
Editor/UIModules/: about.py  asset_preview.py  create_project.py  settings_wizard.py  start_page.py  ui_editor.py
Editor/docs/: home.crhd  license.crhd
Editor/docs/errors/: error.crhd
Editor/docs/help/: toc.crhd
Editor/docs/help/chapter0/: chapter0Landing.crhd
Editor/docs/help/chapter1/: chapter1.crhd
Editor/docs/help/chapter2/: chapter2.crhd
Editor/docs/help/chapter3/: chapter3.crhd
Editor/docs/help/chapter4/: chapter4.crhd  errorcodes.crhd
Editor/docs/help/chapter5/: chapter5.crhd
Engine/: CMakeLists.txt  cppTester.cpp  debugSystem.h  engineMain.py  engineTester.py  eventHandler.h  linuxEngineCompiler.sh  linuxQuickEngineCompiler.sh  sdlWrapper.cpp  uiHandler.h  winEngineCompiler.bat
Engine/Compilers/: linuxEngineCompiler.sh  linuxQuickEngineCompiler.sh  winEngineCompiler.bat
Engine/debug/: debugSystem.h  debugUIHandler.h
Engine/src/: Crumbl2d.h  cbpch.h
Engine/src/Crumbl/Core/: engineMain.py  sdlWrapper.cpp  uiHandler.h
Engine/src/Crumbl2d/Core/: application.cpp  application.h  core.h  entryPoint.h  log.cpp  log.h  window.cpp  window.h
Engine/src/Crumbl2d/Events/: event.cpp  event.h  input.cpp  input.h
Engine/src/Tests/: debugSystem.h
Sandbox/: CMakeLists.txt
Sandbox/src/: sandbox.cpp
